@@ -1,3 +1,8 @@
+2010-01-03  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tcl.m4 (SC_CONFIG_CFLAGS): [Bug 1636685]: Use the configuration
+	for modern FreeBSD suggested by the FreeBSD porter.
+
 2009-12-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/safe.tcl (AliasSource): [Bug 2923613]: Make the safer
